# tocki

./: CMakeLists.txt  main.c
cmake/cmocka/: FindCMocka.cmake
tests/: CMakeLists.txt  simple_test.c
